# Sunshine

./: .gitmodules  CMakeLists.txt  package.json
.github/workflows/: CI.yml
docs/: requirements.txt
msvc/: CMakeLists.txt  CMakePresets.json  vcpkg.json  version.h
msvc/vcpkg-overlay/triplets/: x64-windows-static.cmake
src/: config.cpp  config.h  main.h  rtsp.cpp  stream.cpp  utility.h  video.cpp  video.h  video_colorspace.cpp  video_colorspace.h
src/nvenc/: nvenc_base.cpp  nvenc_base.h  nvenc_colorspace.h  nvenc_config.h  nvenc_cuda.cpp  nvenc_cuda.h  nvenc_d3d11.cpp  nvenc_d3d11.h  nvenc_utils.cpp  nvenc_utils.h
src/platform/: common.h
src/platform/linux/: cuda.cpp  cuda.cu  graphics.cpp  x11grab.cpp
src/platform/macos/: display.mm  nv12_zero_device.cpp  nv12_zero_device.h
src/platform/windows/: display.h  display_base.cpp  display_cuda.cpp  display_cuda.h  display_vram.cpp  misc.cpp
tests/: CMakeLists.txt
